[build-system]

requires = [
   "setuptools",
   "wheel"
]

build-backend = "setuptools.build_meta"

[project]

name="pyswell"
version="0.0.1"
description = "Python API Wrapper for Swell"
classifiers = ["Programming Language :: Python :: 3"]
authors = []
dependencies = [
   "requests",
   "requests-toolbelt",
   "ratelimit"
]
